Link to check answers page from email

--- a/app/views/fetf/activity-list/v2-0/index.html
+++ b/app/views/fetf/activity-list/v2-0/index.html
@@ -42,20 +42,20 @@
 {% endif %}
 
 
-
-
-
-
-</div>
-</div>
-</main>
+<br><br>
 
 <div class="app-contact-panel">
   <h2 class="app-contact-panel__heading">Need help?</h2>
-
   <p class="govuk-body app-contact-panel__body">
-    <a class="govuk-link" href="/fetf/change-request/help-triage">Contact the team</a>
+    <a class="govuk-link" href="/fetf/change-request/help-triage">Contact the team</a> if you need help, want to report a problem or want to make a change to your Grant Funding Agreement.
   </p>
 </div>
+
+</div>
+
+</div>
+</main>
+
+
 
 {% endblock %}
