--- a/app/views/fetf/change-request/submitted-email.html
+++ b/app/views/fetf/change-request/submitted-email.html
@@ -147,7 +147,8 @@
             
               We have received your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement.<br><br>
               The RPA will review your request and let you know the outcome.<br><br>
-              You cannot request another change until this request is resolved.
+              You cannot request another change until this request is resolved.<br><br>
+              You can <a class="govuk-link" href="/fetf/change-request/submitted-answers">see what you've submitted</a>.
             </p>
 
 						
