link back to 'selected items'

--- a/app/views/fetf/application/v1-0/items/equipment-list.html
+++ b/app/views/fetf/application/v1-0/items/equipment-list.html
@@ -12,6 +12,11 @@
 
 
 {% block content %}
+
+{{ govukBackLink({
+  text: "Back to items selected",
+  href: "/fetf/application/v1-0/selected-items"
+}) }}
 <main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
