--- a/app/views/fetf/change-request/equipment-list.html
+++ b/app/views/fetf/change-request/equipment-list.html
@@ -13,7 +13,10 @@
 
 {% block content %}
 
-
+{{ govukBackLink({
+  text: "Back to items selected",
+  href: "/fetf/change-request/selected-items"
+}) }}
 
 <main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
