--- a/app/views/fetf/change-request/item-quantity.html
+++ b/app/views/fetf/change-request/item-quantity.html
@@ -9,6 +9,11 @@
 
 {% block content %}
 
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
+
 <main class="govuk-main-wrapper">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -43,10 +48,7 @@
 
 
 
-  <a href="/fetf/application/v1-0/selected-items" class="govuk-link">
-    Cancel
   
-  </a>
 </div>
 
 
