--- a/app/views/fetf/change-request/selected-items.html
+++ b/app/views/fetf/change-request/selected-items.html
@@ -99,14 +99,20 @@
  <!-- Dummy row -->
       
       <tr class="govuk-table__row" id="selected-items__row">
-        <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic row seeder</td>
-        <td class="govuk-table__cell add-code" id="selected-item" >FETF2</td>
+        <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic tray filling machine</td>
+        <td class="govuk-table__cell add-code" id="selected-item" >FETF1</td>
         <td class="govuk-table__cell add-quantity" id="selected-item">3&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
-        <td class="govuk-table__cell add-grant" id="selected-item">£39,264.00</td>
-        <td class="govuk-table__cell add-score" id="selected-item">55</td>
+        <td class="govuk-table__cell add-grant" id="selected-item">£22,266.00</td>
+        <td class="govuk-table__cell add-score" id="selected-item">65</td>
         <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
       </tr>
 <!-- End of dummy row -->
+
+
+
+
+
+
 
       {% set grantTotal = 0 %}
       {% set scoreTotal = 0 %}
