--- a/app/views/fetf/change-request/selected-items-no-errors.html
+++ b/app/views/fetf/change-request/selected-items-no-errors.html
@@ -35,41 +35,6 @@
     {% endfor %}
 
     
-    {% if scoreTotal/data['selected-items'].length < 55 %}
-    {{ govukErrorSummary({
-      titleText: "There is a problem",
-      errorList: [
-        {
-          text: "Your score is below the minimum threshold of 55, which makes you ineligiable",
-          href: "#"
-        }
-      ]
-    }) }}
-
-
-    {% elseif grantTotal > 35156 %}
-      {{ govukErrorSummary({
-        titleText: "There is a problem",
-        errorList: [
-          {
-            text: "Your items are above the maximum grant amount of £50,000",
-            href: "#"
-          }
-        ]
-      }) }}
-   
-
-    {% elseif grantTotal >= 1 and grantTotal <= 1000 %}
-      {{ govukErrorSummary({
-        titleText: "There is a problem",
-        errorList: [
-          {
-            text: "Your items do not meet the minimum grant amount of £1,000",
-            href: "#"
-          }
-        ]
-      }) }}
-    {% endif %}
 
   
   
@@ -101,11 +66,28 @@
       <tr class="govuk-table__row" id="selected-items__row">
         <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic tray filling machine</td>
         <td class="govuk-table__cell add-code" id="selected-item" >FETF1</td>
-        <td class="govuk-table__cell add-quantity" id="selected-item">2&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
-        <td class="govuk-table__cell add-grant" id="selected-item">£14,844.00</td>
+        <td class="govuk-table__cell add-quantity" id="selected-item">3&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
+        <td class="govuk-table__cell add-grant" id="selected-item">£22,266.00</td>
         <td class="govuk-table__cell add-score" id="selected-item">65</td>
         <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
       </tr>
+      <tr class="govuk-table__row" id="selected-items__row">
+        <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic tray filling machine</td>
+        <td class="govuk-table__cell add-code" id="selected-item" >FETF1</td>
+        <td class="govuk-table__cell add-quantity" id="selected-item">3&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
+        <td class="govuk-table__cell add-grant" id="selected-item">£22,266.00</td>
+        <td class="govuk-table__cell add-score" id="selected-item">65</td>
+        <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
+      </tr>
+      <tr class="govuk-table__row" id="selected-items__row">
+        <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic tray filling machine</td>
+        <td class="govuk-table__cell add-code" id="selected-item" >FETF1</td>
+        <td class="govuk-table__cell add-quantity" id="selected-item">3&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
+        <td class="govuk-table__cell add-grant" id="selected-item">£22,266.00</td>
+        <td class="govuk-table__cell add-score" id="selected-item">65</td>
+        <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
+      </tr>
+
 <!-- End of dummy row -->
 
 
@@ -114,26 +96,14 @@
 
 
 
-      {% set grantTotal = 0 %}
-      {% set scoreTotal = 0 %}
-      {% for item in data['selected-items'] %}
-        {% set grantTotal = grantTotal + item.grantTotal  %}
-        {% set scoreTotal = scoreTotal + item.score %}
-        <tr class="govuk-table__row" id="selected-items__row">
-          <td class="govuk-table__cell add-item" id="selected-item-bold">{{ item.title }}</td>
-          <td class="govuk-table__cell add-code" id="selected-item" >FETF{{ item.itemCode }}</td>
-          <td class="govuk-table__cell add-quantity" id="selected-item">{{ item.quantity }}&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
-          <td class="govuk-table__cell add-grant" id="selected-item">{{ item.grantTotal | currency }}</td>
-          <td class="govuk-table__cell add-score" id="selected-item">{{ item.score }}</td>
-          <td class="govuk-table__cell"><a href="selected-items-no-errors.html" class="govuk-body-s" style="text-align: right;">Remove</a></td>
-        </tr>
-      {% endfor %}
+      
+   
       <tr class="govuk-table__row" id="selected-items__row">
         <th scope="row" class="govuk-table__cell" id="mobile-hide"><strong>Total requested grant amount</strong></th>
         <td class="govuk-table__cell" id="mobile-hide"></td>
         <td class="govuk-table__cell" id="mobile-hide"></td>
-        <td class="govuk-table__cell add-total-grant"id="selected-item" ><strong> {{ (grantTotal + 14844) | currency }}</strong></td>
-        <td class="govuk-table__cell add-total-score" id="selected-item"><strong>{{ (scoreTotal + 65)/(data['selected-items'].length +1)}}</strong></td>
+        <td class="govuk-table__cell add-total-grant"id="selected-item" ><strong> £22,266.00</strong></td>
+        <td class="govuk-table__cell add-total-score" id="selected-item"><strong>65</strong></td>
       <td class="govuk-table__cell" id="mobile-hide"></td>
       </tr>
     </tbody>
