Updated check answers

--- a/app/views/fetf/change-request/check-answers.html
+++ b/app/views/fetf/change-request/check-answers.html
@@ -140,7 +140,7 @@
               text: "What do you want to change?"
             },
             value: {
-              text: "Tray filler, row seeder, tree shears, trailers small and water treatment"
+              text: "Tray filler, fertiliser applicator"
             },
             actions: {
               items: [
