--- a/app/views/fetf/_includes/details-block_application-questions-contact.html
+++ b/app/views/fetf/_includes/details-block_application-questions-contact.html
@@ -10,6 +10,6 @@
       <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
       </p>
       
-      <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+      <p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FETF@enquiries@rpa.gov.uk</a></p>
     </div>
   </details>
