--- a/app/views/fetf/application/v1-0/business-details/business-structure.html
+++ b/app/views/fetf/application/v1-0/business-details/business-structure.html
@@ -29,9 +29,9 @@
                 Who is applying?
               </h2>
             </legend>
-            <!-- <div id="business-structure-hint" class="govuk-hint">
-              Select all that apply.
-            </div> -->
+            <div id="business-structure-hint" class="govuk-hint">
+              Select all that apply
+            </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="structure" name="structure" type="checkbox" value="Landowner">
