--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -68,7 +68,7 @@
               <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-contact-3">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-text">
-                    Please specify which scheme
+                    Enter schemes
                   </label>
                   <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contactByText" type="tel" autocomplete="tel">
                 </div>
