--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -30,9 +30,12 @@
               What do you use your land for?
             </h1>
           </legend>
+
+          <p class="govuk-body">We check your land use against the items you select.</p>
           <div id="contact-hint" class="govuk-hint">
             Select all that apply. Enter approximate hectares in whole numbers.
           </div>
+          
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
