--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -82,7 +82,7 @@
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                 <strong class="govuk-warning-text__text">
                   <span class="govuk-visually-hidden">Warning</span>
-                  Double-check your documents for accuracy before submission. Uploading false information, even unintentionally, can be construed as fraud.
+                  Mistakes can be seen as fraud so check your documents carefully before submitting.
                 </strong>
               </div>
              
@@ -114,12 +114,14 @@
   {% include "../../_includes/details-block_claim-questions-contact.html" %}
 
   <br><br>
-<a href="/fetf/claim/v1-0/upload">Option A</a>
+
+<!-- <a href="/fetf/claim/v1-0/upload">Option A</a>
 
 <a href="/fetf/claim/v1-0/upload-b">Option B</a>
 
 <a href="/fetf/claim/v1-0/upload-c">Option C</a>
-<br><br>
+<br><br> -->
+
     </div>
   </div>
 
