--- a/app/views/ftf/change-request/submitted-email.html
+++ b/app/views/ftf/change-request/submitted-email.html
@@ -147,7 +147,7 @@
             
               We have received your request to change your Slurry Infrastructure grant funding agreement. <br><br>
               The RPA will review your request and let you know the outcome.<br><br>
-              You cannot request another change until this request is resolved.<br><br>
+              You cannot make the change until the RPA has approved the request or your Grant Funding Agreement will be invalid.<br><br>
               You can <a class="govuk-link" href="/ftf/change-request/submitted-answers">see what you've submitted</a>.
             </p>
 
@@ -168,7 +168,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">gsclaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
