--- a/app/views/ftf/change-request/reminder-email.html
+++ b/app/views/ftf/change-request/reminder-email.html
@@ -147,7 +147,7 @@
             
               Your grant funding agreement is ready for you to read and accept. <br><br>
               You must read and accept the agreement by 11:59pm on <strong>13 October 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
-              You cannot request another change until this request is resolved.<br><br>
+              You cannot make the change until the RPA has approved the request or your Grant Funding Agreement will be invalid.<br><br>
               <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a><br><br>
               Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.<br><br><br>
 
@@ -172,7 +172,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">gsclaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
