Email content updated

--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -100,7 +100,7 @@
                 </dl>
                 
                 <h2 class="govuk-heading-m">Now send your help request</h2>
-                <p class="govuk-body">The RPA will review your request and let you know the outcomes. You cannot request another change until this request is resolved.</p>
+                <p class="govuk-body">The RPA will review your request and let you know the outcomes. Do not proceed with the changes until the RPA has approved it or the changes will invalidate your Grant Funding Agreement.</p>
                 <form action="thank-you" method="post" novalidate>
                   <input type="hidden" name="answers-checked" value="true">
                   <button type="submit" class="govuk-button" data-module="govuk-button">
