--- a/app/views/ftf/change-request/rejected-email.html
+++ b/app/views/ftf/change-request/rejected-email.html
@@ -188,7 +188,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">gsclaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
