--- a/app/views/ftf/change-request/select-reason.html
+++ b/app/views/ftf/change-request/select-reason.html
@@ -46,8 +46,8 @@
           },
           items: [
             {
-              value: "change a claim",
-              text: "Change a claim"
+              value: "change claim schedule",
+              text: "Change claim schedule"
             },
             {
               value: "change claim dates",
@@ -71,7 +71,7 @@
             },
             {
               value: "delay to outputs",
-              text: "Delay to outputs"
+              text: "Delay to outputs or project completion"
             },
             {
               value: "decrease grant amount",
