--- a/app/views/ftf/change-request/thank-you.html
+++ b/app/views/ftf/change-request/thank-you.html
@@ -37,7 +37,7 @@
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-two-thirds-from-desktop">
                 <h1 class="govuk-heading-l">Thank you</h1>
-                <p>RPA should complete the review and get in touch with you by 13 August 2024.</p>
+                <p>RPA will aim to complete the review and get in touch with you by 13 August 2024. If they require more information from you this could take longer.</p>
                 
       
       <br><br><br>
