FTF updated how we ask about a change

--- a/app/views/ftf/activity-list/v3-0/index.html
+++ b/app/views/ftf/activity-list/v3-0/index.html
@@ -65,7 +65,7 @@ Water Management Grant - Round 3
   <h2 class="app-contact-panel__heading">Need help?</h2>
 
   <p class="govuk-body app-contact-panel__body">
-    <a class="govuk-link" href="../../change-request/help-triage">Contact the team</a>
+    <a class="govuk-link" href="../../change-request/help-triage">Contact the team</a> if you need help, want to report a problem or want to make a change to your Grant Funding Agreement.
   </p>
 </div>
 
