--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      Explain why you need the change
+                      Explain why you need the change?
                     </dt>
                     <dd class="govuk-summary-list__value">
                       {{ data['explainChange'] }}
@@ -74,17 +74,7 @@
                       <a class="govuk-link" href="select-reason">Change<span class="govuk-visually-hidden"> Explain why you need the change </span></a>
                     </dd>
                   </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Describe the changes in detail
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      {{ data['moreDetail'] }}
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="describe-reason">Change<span class="govuk-visually-hidden"> previous application number</span></a>
-                    </dd>
-                  </div>
+                  
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
                       Uploaded evidence
