--- a/app/views/ftf/change-request/describe-reason.html
+++ b/app/views/ftf/change-request/describe-reason.html
@@ -46,18 +46,9 @@
       
       
       
-        <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper">
-            <label class="govuk-label govuk-label--l" for="more-detail">
-              Describe the changes in detail
-            </label>
-          </h1>
-          <textarea class="govuk-textarea" id="more-detail" name="moreDetail" rows="5" aria-describedby="more-detail-hint"></textarea>
-        </div>
+        
 
-        <br>
-
-        <h2 class="govuk-heading-m">Upload evidence (optional)</h2>
+        <h2 class="govuk-heading-l">Upload evidence (optional)</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="file-upload-1">
             Upload a file
