Added rejected option for GFA is not signed

--- a/app/views/fetf/change-request/rejected-email-gfa-notsigned.html
+++ b/app/views/fetf/change-request/rejected-email-gfa-notsigned.html
@@ -146,19 +146,22 @@
               Dear John Smith,<br><br>
             
               Your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement has been rejected. <br><br><br>
+              
               <strong>What you need to do</strong><br><br>
-              You can continue with your original grant funding agreement.<br><br>
+              You can still accept your original grant funding agreement.
+
+You must read and accept the agreement by 11:59pm on <b>13 October 2024</b> or the offer will expire and we cannot award you a grant.<br><br>
               
-              <a href="/_common/not-testing.html">View your grant funding agreement</a>
+              <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a>
           
-              
-              
+              <br><br>
+              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
 
             </p>
 
             <br>
-            <strong>Withdraw your application</strong><br><br>
-            If you can no longer carry out your project as agreed in the Grant Funding Agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
+            <strong>If you do not want to accept your agreement</strong><br><br>
+            If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
 
             <br><br>
  
@@ -194,7 +197,7 @@
             <br><br><br>
       
       
-            <a href="../../fetf/change-request/rejected-email-gfa-notsigned">Rejected GFA not signed email </a>
+            <a href="../../fetf/change-request/reminder-email">Reminder email </a>
 
 
             
