--- a/app/views/ftf/change-request/rejected-email-gfa-notsigned.html
+++ b/app/views/ftf/change-request/rejected-email-gfa-notsigned.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request rejected: FETF: Productivity grant <br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request rejected: Slurry Infrastructure grant<br><br>
 
           <script>
             function navigateToPage() {
@@ -137,34 +137,42 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Farming Equipment and Technology Fund: Productivity grant <br>
-          <strong>Project reference:</strong> HDJ2123F</p>
+          <strong>Grant:</strong> Slurry Infrastructure Grant<br>
+          <strong>Project reference:</strong> SI-VMA-1234</p>
         
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
             
-              Your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement has been rejected. <br><br><br>
+              Your request to change your Slurry Infrastructure grant funding agreement has been rejected.<br><br>
+              <br>
+
               <strong>What you need to do</strong><br><br>
-              You can continue with your original grant funding agreement.<br><br>
+              You can still accept your original grant funding agreement.
+
+You must read and accept the agreement by 11:59pm on <b>13 October 2024</b> or the offer will expire and we cannot award you a grant.<br><br>
               
-              <a href="/_common/not-testing.html">View your grant funding agreement</a>
+              <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a>
           
-              
-              
+              <br><br>
+              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
 
             </p>
 
             <br>
-            <strong>Withdraw your application</strong><br><br>
-            If you can no longer carry out your project as agreed in the Grant Funding Agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
+            <strong>If you do not want to accept your agreement</strong><br><br>
+            If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
+
+            <br><br>
 
             <br><br>
  
               
 
             </p>
+
+            
 
 						
             <hr style="margin: 30px 0;">
@@ -183,7 +191,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">gsclaimqueries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
@@ -194,7 +202,7 @@
             <br><br><br>
       
       
-            <a href="../../fetf/change-request/rejected-email-gfa-notsigned">Rejected GFA not signed email </a>
+            <a href="../../ftf/change-request/reminder-email">Reminder email </a>
 
 
             
