--- a/app/views/ftf/change-request/rejected-email.html
+++ b/app/views/ftf/change-request/rejected-email.html
@@ -149,19 +149,18 @@
               <br>
 
               <strong>What you need to do</strong><br><br>
-              You can still accept your original grant funding agreement.<br><br>
-              You must read and accept the agreement by 11:59pm on <strong>13 October 2024 </strong>or the offer will expire and we cannot award you a grant.<br><br>
- 
-              <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a>
-              <br><br>
+              You can continue with your original grant funding agreement.<br><br>
               
-              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
+              <a href="/_common/not-testing.html">View your grant funding agreement</a>
+          
+              
+              
 
             </p>
 
             <br>
-            <strong>If you do not want to accept your agreement</strong><br><br>
-            If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
+            <strong>Withdraw your application</strong><br><br>
+            If you can no longer carry out your project as agreed in the Grant Funding Agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
 
             <br><br>
  
@@ -199,7 +198,7 @@
             <br><br><br>
       
       
-            <a href="../../ftf/change-request/reminder-email">Reminder email </a>
+            <a href="../../ftf/change-request/rejected-email-gfa-notsigned">Rejected GFA not signed email </a>
 
 
             
