--- a/app/views/fetf/help.html
+++ b/app/views/fetf/help.html
@@ -63,7 +63,7 @@ Help
 
 
 
-<p>You can call the Rural Payments Agency on:</p>
+<p>You can call the Rural Payments Agency on: test</p>
 <p>
   Telephone: 0300 020 0301<br>
 </p>
