list management rewrite changes

--- a/app/views/fetf/rewrite/check-details/check-your-details-mini.html
+++ b/app/views/fetf/rewrite/check-details/check-your-details-mini.html
@@ -16,7 +16,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/fetf-check-business-details1" method="post">
+    <form action="/checkTaskComplete1" method="post">
       <span class="govuk-caption-l">Apply</span>
     <h1 class="govuk-heading-l">Confirm the details you have given us</h1>
 
