--- a/app/views/fetf/rewrite/task-list.html
+++ b/app/views/fetf/rewrite/task-list.html
@@ -39,32 +39,37 @@
     <ul class="govuk-task-list">
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="check-details/check-your-personal-details" aria-describedby="application-details-2-status">Check your details</a>
-        </div>
+
+        {% if (data.checkComplete == 'Yes') %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="check-details/check-your-details-mini" aria-describedby="application-details-2-status">Check your details</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+           Completed
+          </div>
+        {% else %}
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="check-details/check-your-personal-details" aria-describedby="application-details-2-status">Check your details</a>
+          </div>
+          <div class="govuk-task-list__status" id="company-details-1-status">
+            <strong class="govuk-tag govuk-tag--blue">
+             Not yet started
+            </strong>
+          </div>
+        {% endif %}
+    </li>
+
+
+
+    <li class="govuk-task-list__item ">
+      <div class="govuk-task-list__name-and-hint">
+        <div><a class="govuk-link govuk-task-list__link" href="select-items/which-item-types" aria-describedby="application-details-2-status">Select your items</a></div>
+      </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
             Not yet started
           </strong>
         </div>
-      </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <div>About your business</div>
-        </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Not yet started
-        </div>
-      </li>
-
-    <li class="govuk-task-list__item ">
-      <div class="govuk-task-list__name-and-hint">
-        <div>Select your items</div>
-      </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-        Cannot start yet
-      </div>
     </li>
   
     <li class="govuk-task-list__item">
