--- a/app/views/ftf/help.html
+++ b/app/views/ftf/help.html
@@ -67,6 +67,9 @@ Help
 <p>
   Telephone: 0300 020 0301<br>
 </p>
+<p>
+  Mobile number (test): 0300 020 0301<br>
+</p>
 
 <p>
   Monday to Friday, 8:30am to 5pm (except public holidays)<br>
