--- a/app/views/fetf/_includes/activity-list_status-block.html
+++ b/app/views/fetf/_includes/activity-list_status-block.html
@@ -44,9 +44,9 @@
 {% elif (data['fetf-status'] == "03") %}
 <!-- First claim window open -->
 
-<h3 class="govuk-heading-m">You can submit your claim</h3>
+<!-- <h3 class="govuk-heading-m">You can submit your claim</h3> -->
 <div class="govuk-inset-text">
-    Your claim is due by 11:59pm on <strong>29 November 2024</strong>.
+    Claim deadline: 11:59pm, <strong>8 December 2024</strong>.
 </div>
 
 {% elif (data['fetf-status'] == "04") %}
