--- a/app/views/fetf/claim/v1-1/claim-detail.html
+++ b/app/views/fetf/claim/v1-1/claim-detail.html
@@ -19,12 +19,84 @@ Check claim details
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="/fetf/claim/v1-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02b">
+        <form method="post" action="/fetf/claim/v1-1/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=01a">
 
-        <span class="govuk-caption-xl">Submit claim</span>
-        <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check approved grant funding</h1>
+        <!-- <span class="govuk-caption-xl">Submit claim</span> -->
+        <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check items you're claiming for</h1>
 
-        {% include "../../_includes/body-content_claim-detail-main-block.html" %}
+      
+
+
+
+
+
+
+
+
+
+        
+        
+        
+        
+        
+        
+        <span class="content-section">
+          <p class="govuk-body">These are the items on your grant funding agreement</p>
+        
+        
+        <p class="govuk-body">You can <a href="#">change or remove an item</a> if it's not available as long as your claim total is still between £1,000 and £50,000.</p>
+
+        <p class="govuk-body">You must make any changes before you submit this claim.</p>
+        <p class="govuk-body">You cannot add items.</p>
+        
+        <!-- TABLE CONTENT -->
+        <table class="govuk-table">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th scope="col" class="govuk-table__header">Items</th>
+              <th scope="col" class="govuk-table__header">Code</th>
+              <th scope="col" class="govuk-table__header govuk-table__header--numeric">Quantity</th>
+              <th scope="col" class="govuk-table__header govuk-table__header--numeric">Grant amount</th>
+            </tr>
+          </thead>
+          <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Bracken roller</td>
+                <td class="govuk-table__cell">FETF414</td>
+                <td class="govuk-table__cell" style="text-align: right;">3</td>
+                <td class="govuk-table__cell" style="text-align: right;">£2,608.20</td>
+              </tr>
+
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Grassland pasture aerator</td>
+                <td class="govuk-table__cell">FETF411</td>
+                <td class="govuk-table__cell" style="text-align: right;">1</td>
+                <td class="govuk-table__cell" style="text-align: right;">£1,749.00</td>
+              </tr>
+
+              <tr class="govuk-table__row">
+                <td class="govuk-table__cell">Variable rate controller for seed drills, sprayers and fertiliser spreaders</td>
+                <td class="govuk-table__cell">FETF50</td>
+                <td class="govuk-table__cell" style="text-align: right;">1</td>
+                <td class="govuk-table__cell" style="text-align: right;">£2,917.80</td>
+              </tr>
+
+              
+          
+            <tr class="govuk-table__row">
+              <td scope="row" class="govuk-table__cell"><strong>Total</strong></td>
+              <td class="govuk-table__cell"></td>
+              <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+              <td class="govuk-table__cell govuk-table__cell--numeric"><strong>£7275.00</strong></td>
+            </tr>
+          </tbody>
+        </table>
+        
+        <br>
+        
+        
+        
+        </span>
         
 
         {{govukButton({
