--- a/app/views/fetf/claim/v1-1/index.html
+++ b/app/views/fetf/claim/v1-1/index.html
@@ -32,9 +32,9 @@ Start your claim
 
 
 <ol class="govuk-prototype-kit-task-list">
-  {% include "../../_includes/activity-list_task-section_apply.html" %}
-  {% include "../../_includes/activity-list_task-section_agreement.html" %}
-  {% include "../../_includes/activity-list_task-section_claim.html" %}
+  <!-- {% include "../../_includes/activity-list_task-section_apply.html" %}
+  {% include "../../_includes/activity-list_task-section_agreement.html" %} -->
+  {% include "../../_includes/activity-list_task-section_claim_v1.1.html" %}
 </ol>
 
 {% if (data['fetf-status'] == "01c") or (data['fetf-status'] == "02") or (data['fetf-status'] == "03") %}
