new files for financial evidence

--- a/app/views/fetf/rewrite/check-details/business-type/land-details.html
+++ b/app/views/fetf/rewrite/check-details/business-type/land-details.html
@@ -82,7 +82,6 @@
                   Area of woodland
                 </label>
                 <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="forestry-hectares" name="forestryHectares" type="text" spellcheck="false" inputmode="numeric" value="{{ data['forestryHectares'] }}">
-                  <div class="govuk-input__suffix">
                   <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
                 </div>
                 <br>
@@ -92,14 +91,12 @@
               
               <div class="govuk-form-group">
                 <label class="govuk-label" for="width-4">
-                  Enter relevant land parcel IDs, for example 3903
+                  Enter relevant land parcel IDs, for example 3903, 5067
                 </label>
                 <input class="govuk-input govuk-input--width-4" id="landParcelId" name="landParcelId" type="text">
                 
               </div>
-              </div>
-              <br>
-              <a href="#" class="govuk-link">Add another land parcel ID</a>
+
             </div>
           </div>
           <br>
