--- a/app/views/fetf/rewrite/check-details/what-is-your-business-address.html
+++ b/app/views/fetf/rewrite/check-details/what-is-your-business-address.html
@@ -17,9 +17,9 @@ what-is-your-business-address? – {{ serviceName }} – GOV.UK Prototype Kit
 
 
 
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-
-      <h1 class="govuk-heading-xl">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+<span class="govuk-caption-l govuk-!-margin-top-4">Apply</span>
+      <h1 class="govuk-heading-l">
       What is your business address?
       </h1>
 
@@ -38,7 +38,7 @@ what-is-your-business-address? – {{ serviceName }} – GOV.UK Prototype Kit
 
 
 
-    <input class="govuk-input govuk-!-width-three-quarters" id="three-quarters" name="postcode1" type="text" value="{{ data['postcode1'] }}">
+    <input class="govuk-input govuk-input--width-5" id="three-quarters" name="postcode1" type="text" value="{{ data['postcode1'] }}">
 
 
   </div>
