--- a/app/views/fetf/rewrite/select-items/equipment-list.html
+++ b/app/views/fetf/rewrite/select-items/equipment-list.html
@@ -22,7 +22,10 @@
     <div class="govuk-grid-column-two-thirds">
       <span class="govuk-caption-l">Apply</span>
       <h1 class="govuk-heading-l" style="margin-bottom:30px;">Select items</h1>
-      <a class="govuk-link" href="/fetf/application/v1-0/selected-items">View selected items (0)</a>
+
+
+ 
+
       <p>The filters you have applied are: <strong>{{ data['category'] }}</strong> <span class="govuk-!-margin-left-4"><a href="which-item-types">Change filters</a></p>
       <div class="govuk-inset-text">
         The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.
@@ -32,6 +35,7 @@
     </div>
   </div>
   <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
 
 
@@ -135,6 +139,7 @@
 </nav>
 
 -->
+</div>
 
 </main>
 
