--- a/app/views/fetf/rewrite/select-items/item-list-add.html
+++ b/app/views/fetf/rewrite/select-items/item-list-add.html
@@ -84,13 +84,13 @@
       </div>
       <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="add-another" name="add-another" type="radio" value="Yes">
+          <input class="govuk-radios__input" id="add-another" name="addAnother" type="radio" value="Yes">
           <label class="govuk-label govuk-radios__label" for="add-another">
             Yes
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="add-another-2" name="add-another" type="radio" value="No">
+          <input class="govuk-radios__input" id="add-another-2" name="addAnother" type="radio" value="No">
           <label class="govuk-label govuk-radios__label" for="add-another-2">
             No
           </label>
@@ -104,6 +104,9 @@
       <div class="govuk-button-group">
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
+    </button>
+    <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Save and come back later
     </button>
     
     </div>
